# dotfiles

./: .bashrc  .gitignore  .tmux.conf  .tmux.conf.local  README.md  configure.sh  installed.txt  sync_dotfiles.sh
.config/: .gitignore  (+1 more)
ansible/: .gitignore  README.md  ansible.cfg  bootstrap.yml  hosts  pyproject.toml  setup.yml  site.yml  skip_packages.yml.example
ansible/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
ansible/molecule/rockylinux9/: converge.yml  molecule.yml  prepare.yml
ansible/molecule/ubuntu2204/: converge.yml  molecule.yml
ansible/roles/_template/defaults/: main.yml
ansible/roles/_template/files/: README.md
ansible/roles/_template/handlers/: main.yml
ansible/roles/_template/meta/: main.yml
ansible/roles/_template/tasks/: main.yml
ansible/roles/_template/templates/: README.md
ansible/roles/_template/tests/: test.yml
ansible/roles/_template/vars/: main.yml
ansible/roles/base/: README.md
ansible/roles/base/meta/: main.yml
ansible/roles/base/tasks/: Archlinux.yml  Debian.yml  RedHat.yml  main.yml
ansible/roles/cargo/: README.md
ansible/roles/cargo/defaults/: main.yml
ansible/roles/cargo/handlers/: main.yml
ansible/roles/cargo/meta/: main.yml
ansible/roles/common/: README.md
ansible/roles/devenv/: README.md
ansible/roles/discover/: README.md
ansible/roles/discovery/: README.md
ansible/roles/docker/: README.md
ansible/roles/dotfiles/: README.md
ansible/roles/git/: README.md
ansible/roles/github/: README.md
ansible/roles/shell/: README.md
ansible/roles/tools/: README.md
(+314 files in other folders)
