[project]
name = "ansible-dotfiles"
version = "0.1.0"
description = "Ansible playbooks for development environment setup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=9.0.0",
    "molecule>=24.0.0",
    "molecule-plugins[docker]>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "ansible-lint>=24.0.0",
]
